--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open",
+    "start": "webpack-dev-server",
+    "start:open": "webpack-dev-server --open",
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production"
   },
